Fix for bug 113050. Patch submitted by Denis Antrushin <adu@sparc.spb.su>. Need to add every message url as attachment when forwarding messages. R=ducarroz, SR=bienvenu, A=asa